--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: {{ site.name }}
+title: "Horários"
 ---
 
 <div id="home">
@@ -46,4 +46,45 @@ title: {{ site.name }}
 
     {% endfor %}
   {% endfor %}
+
+  {% for professor in site.data.horarios.professores %}
+    <div id="{{ professor.nome | downcase }}"></div>
+    <h1>{{ professor.nome }}</h1>
+
+    <table>
+      <tr class="reverse-green">
+        {% for coluna in professor.colunas %}
+          <th>{{ coluna }}</th>
+        {% endfor %}
+      </tr>
+      {% for linha in professor.linhas %}
+        {% if linha.aulas[0].disciplina == "ALMOÇO"
+          or linha.aulas[0].disciplina == "JANTAR" %}
+          <tr class="reverse-black">
+            <td><b>{{ linha.horario }}</b></td>
+
+            <td colspan="5"><b>{{ linha.aulas[0].disciplina }}</b></td>
+          </tr>
+        {% else %}{% if linha.aulas[0].disciplina == "INTERVALO" %}
+          <tr class="reverse-gray">
+            <td><b>{{ linha.horario }}</b></td>
+
+            <td colspan="5"><b>{{ linha.aulas[0].disciplina }}</b></td>
+          </tr>
+        {% else %}
+          <tr>
+            <td><b>{{ linha.horario }}</b></td>
+            
+            {% for aula in linha.aulas %}
+              <td style="width: 145px;">
+                <div class="disciplina">{{ aula.disciplina }}</div>
+                <div class="professor">{{ aula.turma }}</div>
+              </td>
+            {% endfor %}
+          </tr>
+        {% endif %}{% endif %}
+      {% endfor %}
+    </table>
+  {% endfor %}
+
 </div>
